Add masked request/response logging, sensitive-data config, and Lombok model consolidation
Wires LogMasker into the REST client build path with config-sourced sensitive header/query-param masking, moves Constants/LogMasker under utils/, consolidates REST user models onto Lombok-based User/UserResponse, adds data providers and a TestNG listener scaffold, and relocates testng.xml under src/test/resources/suites/.